--- a/style.css
+++ b/style.css
@@ -795,29 +795,40 @@ nav li {
         text-align: center;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     }
+    .Vatsim-Pilot {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
     .Vatsim-Pilot h2 {
+        width: 90%;
+        max-width: 600px;
         border: 2px solid var(--red);
         border-radius: 40px;
-        padding: 1rem;
+        padding: 1.5rem; /* Increase padding to match */
         background-color: var(--black);
-        text-align: center;
+        margin-bottom: 10px;
         color: var(--red);
-        margin: 0 0 1rem 0; /* Adds space below the border */
+        text-align: center;
         font-weight: 600;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-        opacity: 0.8; /* Added opacity */
+        opacity: 0.8;
+    }
     }
     .Vatsim-Pilot h3 {
+        width: 90%;
+        max-width: 600px;
         border: 2px solid var(--red);
         border-radius: 40px;
-        padding: 1rem;
+        padding: 1.5rem; /* Increase padding to match */
         background-color: var(--black);
-        text-align: center;
+        margin-bottom: 5px;
         color: var(--red);
-        margin: 0 0 1rem 0; /* Adds space below the border */
+        text-align: center;
         font-weight: 600;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-        opacity: 0.8; /* Added opacity */
+        opacity: 0.8;
     }
     
     .gallery-grid {
