--- a/style.css
+++ b/style.css
@@ -1263,6 +1263,7 @@ nav li {
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
         position: relative;
         width: 80vw;
         margin: 20px auto;
