--- a/style.css
+++ b/style.css
@@ -1275,14 +1275,17 @@ nav li {
         font-size: 1.2rem;
         font-weight: bold;
         margin: 10px 0;
+        width: 100%;  /* Make label take full width */
     }
     
     .left {
-        align-self: flex-start;
+        align-self: flex-start; /* Align to the left */
+        text-align: left;
     }
     
     .right {
-        align-self: flex-end;
+        align-self: flex-end;  /* Align to the right */
+        text-align: right;;
     }
     
     .flight-path {
@@ -1300,7 +1303,8 @@ nav li {
         width: 60px;
         height: auto;
         transition: transform 1s ease-in-out, left 15s linear;
-    }        
+    }
+    
 }
 @layer scroll_button {
     .scroll-to-top {
