--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
+        transition: background-color 0.3s, color 0.3s;
         /* backdrop-filter: blur(2px); */
         
         /* Special handling for iOS devices */
@@ -60,6 +61,10 @@
             background-attachment: scroll;
             background-position: top center;
         }
+    }
+    body.dark-mode {
+        background-color: #121212;
+        color: white;
     }
     p {
         color: var(--white);
@@ -226,12 +231,33 @@
 }
 
 .glitch-text {
-    position: relative;
     font-size: 2rem;
     text-transform: uppercase;
     overflow: hidden;
     animation: glitch 2s infinite alternate;
 }
+.neon-text {
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    text-shadow:
+        0 0 5px #ff00ff,
+        0 0 10px #ff00ff,
+        0 0 20px #ff00ff,
+        0 0 40px #ff00ff,
+        0 0 80px #ff00ff;
+    animation: neon 1.5s ease-in-out infinite alternate;
+}
+
+@keyframes neon {
+    0% {
+        text-shadow: 0 0 5px #ff00ff, 0 0 10px #ff00ff, 0 0 20px #ff00ff;
+    }
+    100% {
+        text-shadow: 0 0 10px #ff00ff, 0 0 30px #ff00ff, 0 0 60px #ff00ff;
+    }
+}
+
 @layer header {
     header {
         position: relative;
