--- a/style.css
+++ b/style.css
@@ -1324,10 +1324,8 @@ nav li {
     
     .plane {
         position: absolute;
-        left: 0;
-        top: -20px;
-        width: 60px;
-        height: auto;
+        width: 100px;
+        height: 100%;
         transition: transform 1s ease-in-out, left 15s linear;
     }
     
