--- a/style.css
+++ b/style.css
@@ -1324,16 +1324,18 @@ nav li {
         align-self: flex-start; /* Align to the left */
         text-align: left;
         font-weight: bold;
-        background-image: linear-gradient(to right, /* Add the missing comma */
+        text-shadow: 0 0 10px var(--zseblue), 0 0 15px rgba(0, 0, 0, 0.5); /* Add a subtle highlight */
+        background-image: linear-gradient(to right, 
             #005577, /* Dark Teal */
             #ff3333,  /* Bright Red */
-            #aa66bb,
-            #55aadd,
+            #aa66bb, 
+            #55aadd, 
             #00aa88
         );
         -webkit-background-clip: text; /* Clip the background to the text */
         color: transparent;  /* Make the text color transparent to show the gradient */
     }
+    
     
     
     .right {
