--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@
         --paypalblue: #002991 ;
         --zseblue: #1f7cbc;
         --zsegreen: #486c3e;
+        --padresbrown: #2f241d;
+        --padresgold: #FFC425;
         --main: "MoMontserrat", sans-serif;
         --heading: "EB Garamond", serif;
 		--base-size: 1.167rem;
@@ -1777,39 +1779,28 @@ nav li {
     }
 }
 @layer navbar {
-    /* Style the navigation menu */
-/* Add a black background color to the top navigation */
-.topnav {
-  background-color: #333;
-  overflow: hidden;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add an active class to highlight the current page */
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
-}
-
-/* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
-  display: none;
+    .topnav {
+        overflow: hidden;
+        background-color: #2f241d;
+        position: relative;
+    }
+    .topnav #myLinks {
+        display: none;
+    }
+    .topnav a {
+        color: var(--padresgold);
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+        display: block;
+    }
+    .topnav a.icon {
+        background: black;
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
 }
 @layer comingsoon {
     body, html {
@@ -1862,28 +1853,6 @@ hr {
   margin: auto;
   width: 40%;
 }
-}
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
 }
 @layer flyingimages {
     * {
